initial commit for the web ui
